added folder img

--- a/lesson2/style.css
+++ b/lesson2/style.css
@@ -49,7 +49,7 @@
     flex-direction: column;
     align-items: center;
     color:rgb(69, 2, 71);
-    list-style-image: url(paw3.svg);
+    list-style-image: url(img/paw3.svg);
 }
 
 .links {
